--- a/index/index.html
+++ b/index/index.html
@@ -8,48 +8,72 @@
 </head>
 <body>
     <header class="header-mussum"> <!-- Cabeça -->
-        <h1>Título</h1>
-        <nav>
-            <a href="">1 a</a>
-            <a href="">2 a</a>
-            <a href="">3 a</a>
-            <a href="">4 a</a>
-        </nav>
+        <img src="" alt="logo-Heróis-do-bairro"> logo
+        <nav> <!-- links -->>
+            <ul>
+                <a href="">1 a</a>
+                <a href="">2 a</a>
+                <a href="">3 a</a>
+                <a href="">4 a</a>          
+            </ul>
+        </nav> <!-- fim - links -->>
         <div>
             <p>Mussum Ipsum, cacilds vidis litro abertis.  Leite de capivaris, leite de mula manquis sem cabeça. Si num tem leite então bota uma pinga aí cumpadi! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Casamentiss faiz malandris se pirulitá.</p>
             <button type="submit">Login</button>
         </div>
     </header> <!-- Fim - cabeça-->
+
+    <hr>
     
     <main class="container-mussum"> <!-- Meio -->
         <p>Mussum Ipsum, cacilds vidis litro abertis.</p>
-        <div>
+        <div class="container-content-galeria">
             <nav>
-                <p>box 1</p>
-                <p>box 2</p>
-                <p>box 3</p>
-                <p>box 4</p>
+                <ul>
+                    <li><img src="" alt="">img 1</li>
+                    <li><img src="" alt="">img 2</li>
+                    <li><img src="" alt="">img 3</li>
+                    <li><img src="" alt="">img 4</li>
+                </ul>
+                <ul>
+                    <li><p>box 1</p></li>
+                    <li><p>box 2</p></li>
+                    <li><p>box 3</p></li>
+                    <li><p>box 4</p></li>
+                </ul>
             </nav>
             <div class="container-left-side">
+                <h2>subtítulo esquerdo</h2>
                 <p>Quem num gosta di mé, boa gentis num é.</p>
-                <div><img src="" alt=""> <img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                <div><img src="" alt=""> <img src="" alt=""></div> <!-- 2 imgs - superior-->
+                <div><img src="" alt=""></div> <!-- img - inferior -->
             </div>
             <div class="container-right-side">
-                <p>Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</p>
+                <h2>subtítulo direito</h2>
                 <ol>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
+                    <li>Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</li>
+                    <li>Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</li>
+                    <li>Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</li>
+                    <li>Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</li>
+                    <li>Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</li>
                 </ol>
             </div>
         </div> <!--Fim - meio -->
     </main>
 
-    <footer class="rodape-mussum"> <!-- fim -->
+    <hr>
 
+    <footer class="rodape-mussum"> <!-- fim -->
+        <p>Site desenvolvido pela equipe: Renan, Emanuelle, Yasmim, Henrique e Vitor Hugo</p>
+        <hr>
+        <div>
+            <ul>
+                <li><a href=""><img src="" alt=""> logo 1 </a></li>
+                <li><a href=""><img src="" alt=""> logo 2 </a></li>
+                <li><a href=""><img src="" alt=""> logo 3 </a></li>
+                <li><a href=""><img src="" alt=""> logo 4 </a></li>
+            </ul>
+        </div>
     </footer> <!-- fim - fim -->
 
 </body>
